--- a/style.css
+++ b/style.css
@@ -35,3 +35,66 @@ margin-left: 20px;
 color: blue;
 transition: 0.7s;
 }
+
+#sessao {
+        padding: 15rem;
+        background: rgb(238,174,202);
+        background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+
+    }
+#sessao h2{
+    font-size: 3em; /*48px*/
+color: rgba(0, 0, 0, 0.678);
+}
+
+#sessao p{
+    font-size: 2.3em; /**/
+    margin:20px 0 ;
+}
+
+#sessao button{
+padding: 22px;
+border-radius: 50px;
+border-color: rgb(19, 153, 108);
+width: 20em;
+}
+
+#sessao button a{
+    text-decoration: none;
+    color: rgb(19, 153, 108);
+cursor: pointer;
+}
+
+#app{
+    padding: 15rem;
+    background-color: rgb(226,223,233);
+    display: flex;
+    justify-content: space-around;
+    }
+
+#app div button{
+    padding: 22px;
+    border-radius: 50px;
+    border-color:rgb(19, 153, 108) ;
+    width: 20em;
+    cursor: pointer;
+}
+
+    #app button a{
+        text-decoration: none;
+    color: rgb(19, 153, 108);
+
+    }
+
+    #app div p {
+        font-size: 2.9em;
+        margin-bottom: 20px;
+    }
+
+#app div img {
+width:25rem;
+height: 25rem;
+margin-left:50px ;
+margin-top: -70px;
+}
+
